infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aditi-stays-ingress
  namespace: aditi-stays
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: aditistays.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
    - host: api.aditistays.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-api
                port:
                  number: 8080
    - host: chat.aditistays.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 8000
